--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
+plugins {
+    id 'com.github.johnrengelman.shadow' version '2.0.3'
+    id 'java'
+}
+
 group 'com.pikachu.webaddon'
 version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
@@ -36,20 +39,20 @@ repositories {
 
 }
 
-configurations {
-    spark
-}
 
 dependencies {
-    compile 'org.spigotmc:spigot-api:1.12.1-R0.1-SNAPSHOT'
+    compileOnly('org.spigotmc:spigot-api:1.12.1-R0.1-SNAPSHOT') {
+        exclude group: 'org.slf4j', module: 'slf4j-simple'
+    }
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'ch.njol:skript:2.2-dev33'
-    spark group: 'com.sparkjava', name: 'spark-core', version: '2.7.2'
-    configurations.compile.extendsFrom(configurations.spark)
+    compileOnly 'ch.njol:skript:2.2-dev33'
+    compile('com.sparkjava:spark-core:2.7.2')
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+    compile('ch.qos.logback:logback-classic:1.2.3')
+
 }
 
-jar {
-    from {
-        configurations.spark.collect { it.isDirectory() ? it : zipTree(it) }
-    }
+
+shadowJar {
+    dependencies
 }
