--- a/build.gradle
+++ b/build.gradle
@@ -41,15 +41,10 @@ repositories {
 
 
 dependencies {
-    compileOnly('org.spigotmc:spigot-api:1.12.1-R0.1-SNAPSHOT') {
-        exclude group: 'org.slf4j', module: 'slf4j-simple'
-    }
+    compileOnly('org.spigotmc:spigot-api:1.12.1-R0.1-SNAPSHOT')
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'ch.njol:skript:2.2-dev33'
     compile('com.sparkjava:spark-core:2.7.2')
-    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
-    compile('ch.qos.logback:logback-classic:1.2.3')
-
 }
 
 
